--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.fruit_sabzi_mandi">
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -8,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FruitSabziMandi">
-        <activity android:name=".Signup"/>
-        <activity android:name=".Login"/>
+        <activity android:name=".Shop_Details"></activity>
+        <activity android:name=".Signup" />
+        <activity android:name=".Login" />
         <activity android:name=".Intro">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +20,5 @@
             </intent-filter>
         </activity>
     </application>
-
 
 </manifest>
