--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FruitSabziMandi">
-        <activity android:name=".Shop_Details"></activity>
+        <activity android:name=".Shop_Dashboard"></activity>
+        <activity android:name=".Shop_Details" />
         <activity android:name=".Signup" />
         <activity android:name=".Login" />
         <activity android:name=".Intro">
