Recycler view is working for today deals

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FruitSabziMandi">
-        <activity android:name=".Shop_Dashboard"></activity>
+        <activity android:name=".Intro"></activity>
         <activity android:name=".Shop_Details" />
         <activity android:name=".Signup" />
         <activity android:name=".Login" />
-        <activity android:name=".Intro">
+        <activity android:name=".Shop_Dashboard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
