--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,11 +32,19 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.github.smarteist:autoimageslider:1.4.0-appcompat'
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    implementation 'com.github.jaiselrahman:FilePicker:1.3.2'
+    implementation 'com.droidninja:filepicker:2.2.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-database:20.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.google.firebase:firebase-storage:20.0.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
